# lp-diligence-agent

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/src/lp_diligence/: __init__.py  api.py  checklist.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  ingest.py  mcp_server.py  retrieval.py  vectorstore.py
data/corpus/: Blackstone_PES_10Q_Q1_2025.htm  MANIFEST.md
docs/: demo.md  move-to-new-host.md  setup.md  solution-design.md
eval/: run_eval.py
eval/golden_set/: golden_set.jsonl
eval/published/: baseline.json  baseline.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/ask/: route.ts
frontend/src/app/api/checklist/run/: route.ts
frontend/src/app/reports/[docId]/: checklist-runner.tsx  page.tsx
frontend/src/lib/: api.ts
scripts/: cloudflared-config.yml  start-all-demos.ps1  start-demo.ps1  tunnel-quick.mjs
